# Telematics

./: README.md
PulseInsurance/: Package.swift  PulseInsurance.entitlements  project.yml
PulseInsurance/App/: MainTabView.swift  PulseInsuranceApp.swift  PulseTheme.swift  RootView.swift
PulseInsurance/Authentication/: AuthViewModel.swift  SignInView.swift  SignUpContainerView.swift  SignUpStepViews.swift  WelcomeView.swift
PulseInsurance/Dashboard/: DashboardView.swift  ProfileView.swift  ScoreView.swift  TripHistoryView.swift
PulseInsurance/Models/: DriverScore.swift  Trip.swift  User.swift
PulseInsurance/Resources/: Info.plist
PulseInsurance/Services/: AuthService.swift  LocationService.swift  MotionService.swift  TripStorageService.swift
PulseInsurance/Telematics/: TelematicsEngine.swift
backend/rating/: pyproject.toml
backend/rating/pulse_rating.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/rating/rating_engine/: __init__.py  base.py  context.py  engine.py  rate_tables.py
backend/rating/rating_engine/factors/: __init__.py  claims_factor.py  driver_age_factor.py  ncd_factor.py  telematics_factor.py  vehicle_factor.py
backend/rating/scoring_engine/: __init__.py  models.py  score_aggregator.py  trip_scorer.py
backend/rating/tests/: conftest.py  test_factors.py  test_rating_engine.py  test_score_aggregator.py  test_trip_scorer.py
edu-platform/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
edu-platform/app/: globals.css  layout.tsx  page.tsx
edu-platform/components/: ContentBlock.tsx  FocusTimer.tsx  (+3 more)
(+12 files in other folders)
